# data-download

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
app/: main.py
app/static/: obs-metadata.json
app/utils/: geopackage.py  graph.py  inspire.py  table.py
docs/: index.md
src/csvw_api/: convert.py  main.py
src/csvw_api/utils/: __init__.py  geopackage.py  metadata.py  table.py
tests/: constants.py  test_csvwlib.py  test_data_imports.py  test_gpkg.py  test_inspire.py  test_metadata.py
